Collect dll,pdb,lib,so,a,implib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,28 +34,31 @@ function(ag_ffi_configure_target ag_target ag_file_name)
         )
     endif()
 
-    if(WIN32)
-        set(DLL_TRIPLE "${AG_TRIPLE}")
-        if(NOT DLL_TRIPLE)
-            set(DLL_TRIPLE "${VCPKG_TARGET_TRIPLET}")
+    set(seen_targets "")
+    set(result_files "")
+    function(_collect_recursive tgt)
+        if (tgt IN_LIST seen_targets)
+            return()
         endif()
-        if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CONFIG STREQUAL "Debug")
-            set(DEBUG_BIN_DIR "${CMAKE_BINARY_DIR}/vcpkg_installed/${DLL_TRIPLE}/debug/bin")
-            file(GLOB DBG_DLLS "${DEBUG_BIN_DIR}/*.dll")
-            file(GLOB DBG_PDBS "${DEBUG_BIN_DIR}/*.pdb")
-            foreach(f ${DBG_DLLS} ${DBG_PDBS})
-                add_custom_command(TARGET ${ag_target} POST_BUILD
-                    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${f}" "${DST}"
-                )
-            endforeach()
-        else()
-            set(REL_BIN_DIR "${CMAKE_BINARY_DIR}/vcpkg_installed/${DLL_TRIPLE}/bin")
-            file(GLOB REL_DLLS "${REL_BIN_DIR}/*.dll")
-            foreach(dll ${REL_DLLS})
-                add_custom_command(TARGET ${ag_target} POST_BUILD
-                    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${dll}" "${DST}"
-                )
+        list(APPEND seen_targets "${tgt}")
+        list(APPEND result_files $<TARGET_FILE:${tgt}>)
+        list(APPEND result_files $<TARGET_IMPLIB:${tgt}>)
+        list(APPEND result_files $<TARGET_PDB_FILE:${tgt}>)
+        get_target_property(_libs ${tgt} INTERFACE_LINK_LIBRARIES)
+        if (_libs)
+            foreach(dep IN LISTS _libs)
+                if (TARGET ${dep})
+                    _collect_recursive(${dep})
+                endif()
             endforeach()
         endif()
-    endif()
+    endfunction()
+
+    _collect_recursive(${ag_target})
+    list(REMOVE_DUPLICATES result_files)
+    foreach(f IN LISTS result_files)
+        add_custom_command(TARGET ${ag_target} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different "${f}" "${DST}"
+        )
+    endforeach()
 endfunction()
